# apic-studio

./: .gitignore  Makefile  README.md  apic_connector.py  apic_studio.py  apic_studio_cinema.py  build.py  main.py  pyproject.toml
.github/workflows/: release.yaml
apic_studio/: __init__.py  app.py
apic_studio/connector/: __init__.py  connection.py  router.py  server.py
apic_studio/connector/c4d/: core.py  models.py
apic_studio/core/: asset_loader.py  db.py  fs.py  img.py  logger.py  settings.py
apic_studio/messages/: cinema.py
apic_studio/messaging/: cinema.py  message.py
apic_studio/network/: __init__.py  connection.py  server.py
apic_studio/resource/: resources.py
apic_studio/services/: models.py  pools.py
apic_studio/ui/: buttons.py  flow_layout.py  main_window.py  toolbar.py  viewport.py
src/: apic_studio.py  apic_studio_profile.py  run_connector.py
src/apic_connector/c4d/: __init__.py  core.py  hdris.py  materials.py  models.py
src/apic_connector/c4d/services/: core.py  hdris.py  materials.py  models.py
src/apic_studio/: app.py
src/apic_studio/core/: asset.py  asset_loader.py  cmd.py  db.py  fs.py  img.py  settings.py  utils.py
src/apic_studio/resources/: icons.qrc  resources.py
src/apic_studio/resources/icons/: apic_logo.icns
src/apic_studio/scripts/: render_material.py  repath_textures.py
src/apic_studio/services/: __init__.py  asset_loader.py  backup.py  dcc.py  ping.py  pools.py  screenshot.py  tags.py  thumbnail.py
src/apic_studio/ui/: attribute_editor.py  buttons.py  dialogs.py  flow_layout.py  lines.py  log_viewer.py  main_window.py  searchbar.py  toolbar.py  viewport.py
src/apic_studio_utils/: .gitignore  Cargo.toml  Makefile  pyproject.toml  rust_thumbnails.pyi
src/apic_studio_utils/src/: lib.rs
src/shared/: logger.py  utils.py
src/shared/messaging/: __init__.py  message.py
src/shared/network/: __init__.py  connection.py  server.py
