[project]
name = "apic-studio"
version = "0.5.3"
description = "An Asset Browser for Cinema4D"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pyside6>=6.8.2.1", "rust-thumbnails"]

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "pyinstaller>=6.13.0",
    "pyside6-stubs>=6.7.3.0",
    "ruff>=0.12.0",
    "snakeviz>=2.2.2",
]


[tool.uv.sources]
rust-thumbnails = { path = "./src/apic_studio_utils" }
