[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"
requires-python = ">=3.14"

[project]
name = "rust_thumbnails"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.9.4",
    "tomli>=2.0.1",
]
